--- a/flop-or-not-ui/src/app/app.component.html
+++ b/flop-or-not-ui/src/app/app.component.html
@@ -1,7 +1,32 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
-<h1>
-  {{ title }}
-</h1>
-  
-<app-prediction-input-form></app-prediction-input-form>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+
+<nav class="navbar navbar-expand-lg fixed-top" style="background-color: #222222" role='navigation'>
+  <div class='container'>
+    
+    <a class="navbar-brand" style="color:white">Flop or Not</a>
+    <div class="collapse navbar-collapse" id="navbar">
+      <!-- <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('listVehicles') }}" style="color:white">List Vehicles</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('home') }}" style="color:white">Get Started!<i class="fas fa-sign-in-alt" style="margin-left: 5px;"></i></a>
+        </li>
+      </ul> -->
+    </div>
+  </div>
+</nav>
+
+<div class="container" style="margin-top:80px">
+  <app-prediction-input-form></app-prediction-input-form>
+</div>
