--- a/flop-or-not-ui/src/styles.css
+++ b/flop-or-not-ui/src/styles.css
@@ -1,23 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
-@import url('https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css');
-h1 {
-    color: #369;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 250%;
-  }
-  h2, h3 {
-    color: #444;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: lighter;
-  }
-  body {
-    margin: 2em;
-  }
-  body, input[type="text"], button {
-    color: #888;
-    font-family: Cambria, Georgia;
-  }
-  /* everywhere else */
-  * {
-    font-family: Arial, Helvetica, sans-serif;
-  }
+@import url('https://fonts.googleapis.com/css?family=Montserrat|Open+Sans+Condensed:300');* {
+  /* font-family: 'Montserrat', sans-serif; */
+  font-family: 'Montserrat', sans-serif;
+}
+body {
+  background-color: #F5F7FA;
+  /* font-family: 'Open Sans', sans-serif; */
+}
