Successfully calling lambda from client

--- a/flop-or-not-ui/src/app/prediction-results/prediction-results.component.html
+++ b/flop-or-not-ui/src/app/prediction-results/prediction-results.component.html
@@ -1,3 +1,4 @@
-<div *ngIf="results.IMDBScore != -1">
-  <h2>IMDB Score: {{results.IMDBScore}}</h2>
+<div style="padding-top: 15px" *ngIf="results.numberRating != -1">
+  <h2>Score: {{results.numberRating}}</h2>
+  <h2>Rating: {{results.wordRating}}</h2>
 </div>
