--- a/flop-or-not-ui/src/app/prediction-input-form/prediction-input-form.component.html
+++ b/flop-or-not-ui/src/app/prediction-input-form/prediction-input-form.component.html
@@ -23,10 +23,10 @@
     </div>
   
 
-    <button class="btn btn-success" (click)="moviePredictionService.getMoviePrediction(input)">Rate Movie</button>
+    <button class="btn btn-success" (click)="getResults(input)">Rate Movie</button>
 
     <div class="container" style="margin-top: 20px">
-      <app-prediction-results [results]="moviePredictionService.results"></app-prediction-results>
+      <app-prediction-results [results]="results"></app-prediction-results>
     </div>
 
   <!-- </form> -->
