Sugar and Spice, and Everything Nice

--- a/flop-or-not-ui/src/app/app.component.html
+++ b/flop-or-not-ui/src/app/app.component.html
@@ -12,6 +12,7 @@
   <div class='container'>
     
     <a class="navbar-brand" style="color:white">Flop or Not</a>
+    <img style="width: 20px; height: 20px; margin-right: auto" src="../assets/images/flop.png">
     <div class="collapse navbar-collapse" id="navbar">
       <!-- <ul class="navbar-nav mr-auto">
         <li class="nav-item">
@@ -26,6 +27,7 @@
     </div>
   </div>
 </nav>
+
 
 <div class="container" style="margin-top:80px">
   <app-prediction-input-form></app-prediction-input-form>
