--- a/flop-or-not-ui/src/app/prediction-input-form/prediction-input-form.component.html
+++ b/flop-or-not-ui/src/app/prediction-input-form/prediction-input-form.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Prediction Form</h1>
+  <h1>Prediction</h1>
   <!-- <form> -->
     <div class="form-group">
       <label for="director-name">Director</label>
